# Robotic-Data-Acquisition-Setup-for-Camera-Based-Electrode-Digitalization

./: .gitignore  README.md  dummy.txt
Data/hand_eye/: cam.npy
Data/head_coordinate/: acam_t_csys.csv  csys_t_sensor_list.csv  csys_t_sensor_list.npy  ee_t_csys.npy  ee_t_sensor_list.csv  matrix_rightEar.npy  test_csys_t_sensor_list.csv  test_ee_t_sensor_list.npy
Data/ur5_pose/: ur5_pose_jointAngles.txt
Project_report/: abstract.aux  main.aux  main.bbl  main.bcf  main.blg  main.lof  main.run.xml  main.tex  main.toc  mtecreprt.cls  title-TUHH-MTEC.def  titlepage.sty
Project_report/beamer/: Thumbs.db  beamercolorthememtec.sty  beamerinnerthememtec.sty  beamerinnerthememtecDE.sty  beamerouterthememtec.sty  beamerthememtec.sty  beamerthememtecDE.sty  example.aux  example.blg  example.nav  example.out  example.run.xml  example.snm  example.tex  example.toc  example.vrb  (+1 more)
azure_kinect_camera/: CMakeLists.txt  package.xml
forward_kinematics/: CMakeLists.txt  package.xml
forward_kinematics/launch/: real_transform.launch  test_inverse_and_move.launch
forward_kinematics/src/: call_inverse_and_move.py  evaluate_speed.py  get_transformation.py  inverse_server.py  listen_and_publish_transform.py  square.py  test_movement.py  test_vertikal_line.py  transformation_publisher.py  transformation_server.py
forward_kinematics/srv/: DhToPose.srv  DhToPoseMatrix.srv  inverse_kinematics.srv
hand_eye_calibration/: CMakeLists.txt  package.xml
report/: Result_compilation.xlsx
robot_move/: CMakeLists.txt  package.xml
tracking_camera/: CMakeLists.txt  package.xml
(+214 files in other folders)
